RESOLVED FIXED190616
[GTK][WPE] Fix sandbox on distros with suid bubblewrap
https://bugs.webkit.org/show_bug.cgi?id=190616
Summary [GTK][WPE] Fix sandbox on distros with suid bubblewrap
Patrick Griffis
Reported 2018-10-16 07:58:08 PDT
[GTK][WPE] Fix sandbox on distros with suid bubblewrap
Attachments
Patch (1.67 KB, patch)
2018-10-16 07:58 PDT, Patrick Griffis
no flags
[GTK][WPE] Fix sandbox on distros with suid bubblewrap (1.69 KB, patch)
2018-10-16 08:01 PDT, Patrick Griffis
no flags
Patrick Griffis
Comment 1 2018-10-16 07:58:35 PDT
Michael Catanzaro
Comment 2 2018-10-16 07:59:44 PDT
Comment on attachment 352449 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=352449&action=review > Source/WebKit/ChangeLog:4 > + Need the bug URL (OOPS!). Fix this please!
Patrick Griffis
Comment 3 2018-10-16 08:01:02 PDT
Created attachment 352450 [details] [GTK][WPE] Fix sandbox on distros with suid bubblewrap
WebKit Commit Bot
Comment 4 2018-10-16 10:52:31 PDT
Comment on attachment 352450 [details] [GTK][WPE] Fix sandbox on distros with suid bubblewrap Clearing flags on attachment: 352450 Committed r237190: <https://trac.webkit.org/changeset/237190>
WebKit Commit Bot
Comment 5 2018-10-16 10:52:33 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2018-10-16 10:53:36 PDT
Note You need to log in before you can comment on or make changes to this bug.